libaio (0.3.107-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Guillem Jover <guillem@debian.org>  Tue, 24 Jun 2008 08:02:50 +0300

libaio (0.3.106-9) unstable; urgency=low

  * Fix misspelled words (linux -> Linux and aio -> AIO).
  * Update packaging Vcs fields to the new URL.
  * Improve debian/copyright:
    - Change 'Copyright Holder' to 'Copyright Holders'.
    - Use UTF-8 copyright sign.
    - Update upstream download url.
    - Refer to LGPL-2.1 from common-licenses instead of just LGPL.
  * Add a debian/README.source file.
  * Now using Standards-Version 3.8.0.
  * Refresh patches with -pab. (Closes: #484962)
  * Update watch file URL. (Closes: #450017)

 -- Guillem Jover <guillem@debian.org>  Sun, 22 Jun 2008 07:42:52 +0300

libaio (0.3.106-8) unstable; urgency=low

  * Install shared library under /lib, needed by multipath binaries which
    reside under /sbin. (Closes: #441244)
    - debian/patches/02_libdevdir.patch: New file.
  * Add a debugging symbols library package.
  * Add Vcs-Browser and Vcs-Git fields.

 -- Guillem Jover <guillem@debian.org>  Tue, 11 Sep 2007 04:29:22 +0300

libaio (0.3.106-7) unstable; urgency=low

  * Add a new library udeb needed for multipath support. (Closes: #440320)

 -- Guillem Jover <guillem@debian.org>  Thu, 06 Sep 2007 03:11:08 +0300

libaio (0.3.106-6) unstable; urgency=low

  * Link against libgcc to avoid unresolved symbols on at least hppa.
    - debian/01_link_libgcc.patch: New file.
    Thanks to Steve Langasek <vorlon@debian.org> for the analysis.
  * Add shlibs:Depends substvar back into libaio1 Depends, since we link
    against an external library now (although it might not be used on any
    architecture).

 -- Guillem Jover <guillem@debian.org>  Mon, 06 Aug 2007 04:50:18 +0300

libaio (0.3.106-5) unstable; urgency=low

  * Do not ignore 'make clean' errors on clean.
  * Support build-arch and build-indep in debian/rules:
    - Rename install to install-arch.
    - Rename build to build-arch.